--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset=utf-8>
 	<meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<meta name="keywords" content="奇点资讯官方网站 奇点资讯"/>
 	<title>源：用机器智能增强商业应用</title>
 	<script src="three-learn1/js/three.js"></script>
 	<script src="three-learn1/js/MTLLoader.js"></script>
