--- a/public/search.html
+++ b/public/search.html
@@ -5,7 +5,7 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>融合搜索</title>
     <!--<link rel="stylesheet" href="css/indexP.css"/>-->
-    <link rel="stylesheet" href="css/search.css"/>
+    <link rel="stylesheet" href="css/search1.css"/>
     <link rel="stylesheet" href="css/phone.css"/>
     <link rel="stylesheet" href="css/111.css"/>
     <script src="js/jquery.min.js"></script>
