--- a/public/zhuanti-share/index.html
+++ b/public/zhuanti-share/index.html
@@ -13,7 +13,7 @@
     <img src="" alt=""/>
 </div>
 <div class="absBox">
-    <span class="abs">摘要</span><span class="absWord">党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届党的十八届</span>
+    <span class="abs"></span>
 </div>
 <div class="mainBox">
  <!-- <div class="mainData"> -->
