--- a/public/zhuanti-share/index.html
+++ b/public/zhuanti-share/index.html
@@ -13,7 +13,7 @@
     <img src="" alt=""/>
 </div>
 <div class="absBox">
-    <span class="abs"></span>
+    <span class="abs">摘要</span><span class="absWord"></span>
 </div>
 <div class="mainBox">
  <!-- <div class="mainData"> -->
