--- a/public/zhuanti-shares/index.html
+++ b/public/zhuanti-shares/index.html
@@ -7,7 +7,7 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/index.css"/>
     <script src="js/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index1.js"></script>
 </head>
 <body style="background: #f0f0f0">
 <div class="topImg">
@@ -15,7 +15,7 @@
 
 </div>
 <div class="yingdao">
-    <img src="img/tishi.png">
+    <img src="img/bantou.png"><span>点击用浏览器打开</span>
 </div>
 <div class="absBox">
     <span class="abs">摘要</span><span class="absWord"></span>
