--- a/public/zhuanti-shares/index.html
+++ b/public/zhuanti-shares/index.html
@@ -5,9 +5,9 @@
     <meta name="description" content="专题分享"/>
     <title>专题</title>
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/index1.css"/>
     <script src="js/jquery.min.js"></script>
-    <script src="js/index1.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body style="background: #f0f0f0">
 <div class="topImg">
