--- a/public/zhuanti-shares/index.html
+++ b/public/zhuanti-shares/index.html
@@ -21,6 +21,13 @@
     <span class="abs">摘要</span><span class="absWord"></span>
 </div>
 <div class="mainBox">
+    <div class="load">
+        <img src="img/load.gif" alt="" class="loadImg"/>
+        <span class="loadWord">加载中。。。</span>
+    </div>
+    <div class="error">
+        <img src="img/guoqi.png" alt=""/>
+    </div>
  <!-- <div class="mainData"> -->
     <!--<div class="titleData">-->
         <!--<div class="colorBox"></div>-->
