--- a/public/zhuanti-shares/index.html
+++ b/public/zhuanti-shares/index.html
@@ -23,7 +23,7 @@
 <div class="mainBox">
     <div class="load">
         <img src="img/load.gif" alt="" class="loadImg"/>
-        <span class="loadWord">加载中。。。</span>
+        <span class="loadWord">加载中...</span>
     </div>
     <div class="error">
         <img src="img/guoqi.png" alt=""/>
