--- a/public/news.html
+++ b/public/news.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/news2.css"/>
     <script src="js/note.js"></script>
     <script src="js/iscroll-probe.js"></script>
-    <script src="js/ex8.js"></script>
+    <script src="js/jquery.cookie.js"></script>
+    <script src="js/ex9.js"></script>
 </head>
 <script>
     $(function(){
