--- a/public/news.html
+++ b/public/news.html
@@ -14,7 +14,8 @@
     <script src="js/note.js"></script>
     <script src="js/iscroll-probe.js"></script>
     <script src="js/jquery.cookie.js"></script>
-    <script src="js/ex9.js"></script>
+    <!-- <script src="js/ex9.js"></script>-->
+    <script src="js/newsCopy.js"></script>
 </head>
 <script>
     $(function(){
