--- a/public/news.html
+++ b/public/news.html
@@ -15,6 +15,7 @@
     <script src="js/iscroll-probe.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <!-- <script src="js/ex9.js"></script>-->
+    <script src="js/base.js"></script>
     <script src="js/newsCopy.js"></script>
 </head>
 <script>
