--- a/public/videoShare/index.html
+++ b/public/videoShare/index.html
@@ -86,11 +86,11 @@
         <div class="zy_media">
             <video poster="" data-config='{"mediaTitle": ""}' preload="auto" class="imgPlayer">
                 请稍后
-                <source src="http://gslb.miaopai.com/stream/BQ~96GzOm3oyTlia~UBygg__.mp4?yx=&refer=weibo_app&Expires=1484016265&ssig=a9970GXQfx&KID=unistore,video" type="video/mp4" class="sources" id="aa">
+                <source src="" type="video/mp4" class="sources" id="aa">
                 您的浏览器不支持HTML5视频
             </video>
         </div>
-        <div class="videoTitle">此前，在疑似赫子铭求助情感电台的新闻中，该男子曾透露，他与妻子婚后购买了三处房产，北京两套，美国一套。</div>
+        <div class="videoTitle"></div>
 
         <!--评论-->
         <div class="elte-commentbox">
@@ -98,22 +98,7 @@
                 <span>热门评论</span>
             </div>
             <div class="comments">
-                <div class="comment clearfix">
-                    <div class="comment-img"> <img src="http://photocdn.sohu.com/20160315/mp63444225_1457989131470_1.jpeg"> </div>
-                    <div class="comment-info">
-                        <div class="user-info clearfix">
-                            <div class="floatL">
-                                <div class="user-name">火星网友</div>
-                                <!--<div class="user-time">2016-12-12 12:12:00</div>-->
-                            </div>
-                            <!--<div class="floatR">回复-->
-                            <!--</div>-->
-                        </div>
-                        <div class="comment-text">
-                            蔡依林做手表蛋糕让妈妈开心，网友大赞蔡依林为。
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
         <!--相关视频-->
